WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195850
[GTK] [WPE] Fix compilation errors due to undefined ALWAYS_LOG_IF
https://bugs.webkit.org/show_bug.cgi?id=195850
Summary
[GTK] [WPE] Fix compilation errors due to undefined ALWAYS_LOG_IF
Diego Pino
Reported
2019-03-16 02:47:20 PDT
WPE and GTK build bots failed after
https://trac.webkit.org/changeset/243033/webkit
. The changeset introduced new functions ALWAYS_LOG_IF and alike when RELEASE_LOG_DISABLED is false. These macros need to be defined as empty when !RELEASE_LOG_DISABLED.
Attachments
Patch
(1.21 KB, patch)
2019-03-16 02:50 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Patch
(1.22 KB, patch)
2019-03-16 02:51 PDT
,
Diego Pino
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2019-03-16 02:50:19 PDT
Created
attachment 364926
[details]
Patch
Diego Pino
Comment 2
2019-03-16 02:51:59 PDT
Created
attachment 364927
[details]
Patch
WebKit Commit Bot
Comment 3
2019-03-16 04:26:20 PDT
Comment on
attachment 364927
[details]
Patch Clearing flags on attachment: 364927 Committed
r243040
: <
https://trac.webkit.org/changeset/243040
>
WebKit Commit Bot
Comment 4
2019-03-16 04:26:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-03-16 04:58:08 PDT
<
rdar://problem/48952567
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug