[GTK] [WPE] Fix compilation errors due to undefined ALWAYS_LOG_IF https://bugs.webkit.org/show_bug.cgi?id=195850

Unreviewed build fix after r243033.


* wtf/LoggerHelper.h:


Canonical link: https://commits.webkit.org/210123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243040 268f45cc-cd09-0410-ab3c-d52691b4dbfc