Source/WTF/wtf/LoggerHelper.h
@@ -81,6 +81,12 @@ public:
 #define DEBUG_LOG(...)      ((void)0)
 #define WILL_LOG(_level_)   false
 
+#define ALWAYS_LOG_IF(condition, ...)     ((void)0)
+#define ERROR_LOG_IF(condition, ...)      ((void)0)
+#define WARNING_LOG_IF(condition, ...)    ((void)0)
+#define INFO_LOG_IF(condition, ...)       ((void)0)
+#define DEBUG_LOG_IF(condition, ...)      ((void)0)
+
 #endif
     
 };
